--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.0.0",
     "cors": "^2.8.5",
     "csurf": "^1.2.2",
