--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "luxurycarservices",
   "version": "1.0.0",
-  "description": "",
+  "description": "Luxury Car Services Backend",
   "main": "index.js",
   "scripts": {
-  "install": "npm --prefix backend install backend",
-  "dev:backend": "npm install --prefix backend start",
-  "sequelize": "npm run --prefix backend sequelize",
-  "sequelize-cli": "npm run --prefix backend sequelize-cli",
-  "start": "npm start --prefix backend",
-  "build": "npm run --prefix backend build"
-}
-,
+    "install": "npm install --prefix backend",
+    "dev:backend": "npm run dev --prefix backend",
+    "sequelize": "npx sequelize --prefix backend",
+    "sequelize-cli": "npx sequelize-cli --prefix backend",
+    "start": "node backend/bin/www", 
+    "migrate": "npx sequelize db:migrate --prefix backend --env production",
+    "seed": "npx sequelize db:seed:all --prefix backend --env production",
+    "build": "npm run build --prefix backend"
+  },
+  "engines": {
+    "node": "18.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
