--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "luxurycarservices",
   "version": "1.0.0",
-  "description": "Luxury Car Services Backend",
-  "main": "index.js",
   "scripts": {
     "install": "npm install --prefix backend",
-    "dev:backend": "npm run dev --prefix backend",
-    "sequelize": "npx sequelize --prefix backend",
-    "sequelize-cli": "npx sequelize-cli --prefix backend",
-    "start": "node backend/bin/www", 
-    "migrate": "npx sequelize db:migrate --prefix backend --env production",
-    "seed": "npx sequelize db:seed:all --prefix backend --env production",
-    "build": "npm run build --prefix backend"
+    "start": "npm start --prefix backend",
+    "migrate": "npx sequelize-cli db:migrate --env production",
+    "seed": "npx sequelize-cli db:seed:all --env production",
+    "build": "npm install && npm run migrate && npm run seed"
   },
   "engines": {
     "node": "18.x"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
+
