--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "install": "npm install --prefix backend",
     "start": "npm start --prefix backend",
-    "migrate": "npx sequelize-cli db:migrate --env production --cwd backend",
-    "seed": "npx sequelize-cli db:seed:all --env production --cwd backend",
+    "migrate": "cd backend && npx sequelize-cli db:migrate --env production",
+    "seed": "cd backend && npx sequelize-cli db:seed:all --env production",
     "build": "npm install && npm run migrate && npm run seed"
   },
   "engines": {
