--- a/package.json
+++ b/package.json
@@ -6,15 +6,35 @@
     "start": "npm start --prefix backend",
     "migrate": "cd backend && npx sequelize-cli db:migrate --env production",
     "seed": "cd backend && npx sequelize-cli db:seed:all --env production",
+    "rollback": "cd backend && npx sequelize-cli db:migrate:undo --env production",
+    "dev": "nodemon ./backend/bin/www",
+    "start:development": "nodemon ./backend/bin/www",
+    "start:production": "node ./backend/bin/www",
     "build": "npm install && npm run migrate && npm run seed"
   },
-  "engines": {
-    "node": "18.x"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "sequelize": "^6.32.1",
-    "sequelize-cli": "^6.4.1",
-    "pg": "^8.11.0",
-    "pg-hstore": "^2.3.4"
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.0.0",
+    "cors": "^2.8.5",
+    "csurf": "^1.2.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "express-async-errors": "^2.0.0",
+    "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "per-env": "^1.0.2",
+    "pg": "^8.13.0",
+    "sequelize": "^6.37.4",
+    "sequelize-cli": "^6.6.2"
+  },
+  "devDependencies": {
+    "dotenv-cli": "^7.4.2",
+    "nodemon": "^3.1.7",
+    "sqlite3": "^5.1.7"
   }
 }
