hopefully this will fix it

--- a/backend/.sequelizerc
+++ b/backend/.sequelizerc
@@ -1,8 +1,8 @@
-// backend/.sequelizerc
+// .sequelizerc
 const path = require('path');
 
 module.exports = {
-  config: path.resolve('config', 'database.js'),
+  'config': path.resolve('backend/config', 'database.js'),  // Updated path
   'models-path': path.resolve('db', 'models'),
   'seeders-path': path.resolve('db', 'seeders'),
   'migrations-path': path.resolve('db', 'migrations')
