hopefully this will fix it

--- a/backend/.sequelizerc
+++ b/backend/.sequelizerc
@@ -2,7 +2,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('backend/config', 'database.js'),  // Updated path
+  'config': path.resolve('/config', 'database.js'),  // Updated path
   'models-path': path.resolve('db', 'models'),
   'seeders-path': path.resolve('db', 'seeders'),
   'migrations-path': path.resolve('db', 'migrations')
