--- a/backend/.sequelizerc
+++ b/backend/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve(__dirname, 'backend/config/database.js'),  // Correct path
-  'models-path': path.resolve(__dirname, 'db/models'),
-  'seeders-path': path.resolve(__dirname, 'db/seeders'),
-  'migrations-path': path.resolve(__dirname, 'db/migrations')
+  config: path.resolve(__dirname, 'backend', 'config', 'database.js'),
+  'models-path': path.resolve(__dirname, 'backend', 'db', 'models'),
+  'seeders-path': path.resolve(__dirname, 'backend', 'db', 'seeders'),
+  'migrations-path': path.resolve(__dirname, 'backend', 'db', 'migrations')
 };
