--- a/backend/package.json
+++ b/backend/package.json
@@ -1,39 +1,14 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
-    "build": "node psql-setup-script.js",
-    "sequelize": "sequelize",
-    "sequelize-cli": "sequelize-cli",
-    "migrate": "npx dotenv sequelize db:migrate",
-    "seed": "npx dotenv sequelize db:seed:all"
+    "build": "npm run migrate && npm run seed",
+    "migrate": "npx sequelize-cli db:migrate --env production",
+    "seed": "npx sequelize-cli db:seed:all --env production",
+    "sequelize": "npx sequelize-cli"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.0.0",
-    "cors": "^2.8.5",
-    "csurf": "^1.2.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "express-async-errors": "^2.0.0",
-    "express-validator": "^7.2.0",
-    "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "per-env": "^1.0.2",
-    "pg": "^8.13.0",
+    "express": "^4.17.1",
     "sequelize": "^6.37.4",
-    "sequelize-cli": "^6.6.2"
-  },
-  "devDependencies": {
-    "dotenv-cli": "^7.4.2",
-    "nodemon": "^3.1.7",
-    "sqlite3": "^5.1.7"
+    "pg": "^8.7.1"
   }
 }
