--- a/package.json
+++ b/package.json
@@ -1,35 +1,18 @@
 {
   "name": "luxurycarservices",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "install": "npm --prefix backend install",
-    "start": "npm start --prefix backend",
-    "build": "npm run migrate --prefix backend && npm run seed --prefix backend",
-    "sequelize": "npm run sequelize --prefix backend"
-  },
+  "install": "npm --prefix backend install backend",
+  "dev:backend": "npm install --prefix backend start",
+  "sequelize": "npm run --prefix backend sequelize",
+  "sequelize-cli": "npm run --prefix backend sequelize-cli",
+  "start": "npm start --prefix backend",
+  "build": "npm run --prefix backend build"
+}
+,
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.0.0",
-    "cors": "^2.8.5",
-    "csurf": "^1.2.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "express-async-errors": "^2.0.0",
-    "express-validator": "^7.2.0",
-    "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "per-env": "^1.0.2",
-    "pg": "^8.13.0",
-    "sequelize": "^6.37.4",
-    "sequelize-cli": "^6.6.2"
-  },
-  "devDependencies": {
-    "dotenv-cli": "^7.4.2",
-    "nodemon": "^3.1.7",
-    "sqlite3": "^5.1.7"
-  }
+  "license": "ISC"
 }
