--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
     "sequelize": "sequelize",
-    "migrate": "sequelize db:migrate",
-    "seed": "sequelize db:seed:all",
-    "rollback": "sequelize db:migrate:undo",
+    "sequelize-cli": "sequelize-cli",
     "start": "per-env",
     "start:development": "nodemon ./bin/www",
     "start:production": "node ./bin/www",
-    "build": "node psql-setup-script.js",
-    "dotenv": "dotenv -e .env -- node"
+    "build": "node psql-setup-script.js"
   },
   "keywords": [],
   "author": "",
