--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
   "install": "npm --prefix backend install backend",
   "dev:backend": "npm install --prefix backend start",
-  "sequelize": "npm run sequelize",
-  "sequelize-cli": "npm run sequelize-cli",
+  "sequelize": "npm run --prefix backend sequelize",
+  "sequelize-cli": "npm run --prefix backend sequelize-cli",
   "start": "npm start --prefix backend",
   "build": "npm run --prefix backend build"
 }
