--- a/backend/.sequelizerc
+++ b/backend/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  config: path.resolve(__dirname, 'backend', 'config', 'database.js'),
-  'models-path': path.resolve(__dirname, 'backend', 'db', 'models'),
-  'seeders-path': path.resolve(__dirname, 'backend', 'db', 'seeders'),
-  'migrations-path': path.resolve(__dirname, 'backend', 'db', 'migrations')
+  config: path.resolve('config', 'database.js'),
+  'models-path': path.resolve('db', 'models'),
+  'seeders-path': path.resolve('db', 'seeders'),
+  'migrations-path': path.resolve('db', 'migrations'),
 };
