--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "install": "npm --prefix backend install backend",
-  "dev:backend": "npm install --prefix backend start",
-  "sequelize": "npm run --prefix backend sequelize",
-  "sequelize-cli": "npm run --prefix backend sequelize-cli",
-  "start": "npm start --prefix backend",
-  "build": "npm run --prefix backend build"
-}
-,
+    "install": "npm --prefix backend install backend",
+    "dev:backend": "npm install --prefix backend start",
+    "sequelize": "npm run --prefix backend sequelize",
+    "sequelize-cli": "npm run --prefix backend sequelize-cli",
+    "start": "npm start --prefix backend",
+    "build": "npm run --prefix backend build"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.7"
+  }
 }
