seems like its working

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Luxury Car Services Backend",
   "main": "app.js",
   "scripts": {
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
-    "start": "per-env",
-    "start:development": "nodemon ./bin/www",
-    "start:production": "node ./bin/www",
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "build": "node psql-setup-script.js"
   },
   "keywords": [],
@@ -26,8 +25,8 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "per-env": "^1.0.2",
     "pg": "^8.13.0",
+    "per-env": "^1.0.2",
     "sequelize": "^6.37.4",
     "sequelize-cli": "^6.6.2"
   },
